# Exp-C

./: .gitignore  4.2.c  4.3.c  6.3.c  7.1.b.c  7.1.s.c  7.2.c  CMakeLists.txt
C Primer Plus/: 12_7.c
C Primer Plus/1/: 1.c  13.c  Concrete.c
C Primer Plus/10/: bounds.c  day_mon1.c  day_mon2.c  day_mon3.c  designate.c  no_data.c  order.c  pnt_add.c  ptr_ops.c  rain.c  somedata.c  sum_arr1.c  sum_arr2.c
C Primer Plus/13/: count.c  count.out
C Primer Plus/2/: 12_1.c  12_2.c  12_3.c  12_4.c  12_5.c  12_6.c  12_7.c  first.c  nogood.c  two_func.c
C Primer Plus/3/: !11_6.c  11_2.c  11_3.c  11_4.c  11_5.c  11_7.c  altnames.c  badcount.c  bases.c  charcode.c  escape.c  print1.c  print2.c  rhodium.c  showf_pt.c  typesize.c
C Primer Plus/4/: 8_1.c  8_2.c  8_3.c  8_4.c  8_5!.c  8_6.c  8_7.c  defines.c  flags.c  float.c  floatconv.c  input.c  intconv.c  longstrg.c  pentval.c  pizza.c  praise1.c  praise2.c  printout.c  skip2.c  talkback.c  varwid.c  width.c
C Primer Plus/5/: 11_1.c  11_2.c  11_3.c  11_4.c  11_5.c  11_6.c  11_7.c  11_8.c  add_one.c  addemup.c  bottles.c  convert.c  divide.c  golf.c  min_sec.c  post_pre.c  pound.c  rules.c  running.c  shoes1.c  shoes2.c  sizeof.c  squares.c  wheat.c
C Primer Plus/6/: 16_1.c  16_10.c  16_11.c  16_12.c  16_13.c  16_14.c  16_15.c  16_16.c  16_2.c  16_3.c  16_4.c  16_5.c  16_6.c  16_7.c  16_8.c  16_9.c  boolean.c  cmpflt.c  do_while.c  entry.c  for_cube.c  postage.c  power.c  rows1.c  rows2.c  scores_in.c  summing.c  sweetie.c  sweetie2.c  t_and_f.c  trouble.c  truth.c  when.c  while1.c  while2.c  zeno.c
C Primer Plus/7/: 12_1.c  12_10.c  12_11.c  12_2.c  12_3.c  12_4.c  12_5.c  12_6.c  12_7.c  12_8.c  12_9.c  animals.c  break.c  chcount.c  colddays.c  cyoher1.c  cypher2.c  divisors.c  electric.c  paint.c  skippart.c  vowels.c  wordcnt.c
C Primer Plus/8/: 10_1.c  10_2.c  10_3.c  10_4.c  10_5.c  10_6.c  10_7.c  10_8.c  checking.c  echo.c  echo_eof.c  file_eof.c  guess.c  main.c  menuette.c  showchar1.c  showchar2.c
C Primer Plus/9！/: 11_1.c  11_2.c  binary.!  factor.c  hotel.c  hotel.h  lesser.c  lethead1.c  lethead2.c  loccheck.c  misuse.c  proto.c  recur.c  swap1.c  swap2.c  swap3.c  usehotel.c
exp1/: secquence.c  tri.c  实验报告1.md
exp2/: 5.3.c  作业5.docx
hw3/: 3.1.c  3.3.c  作业3.docx
noi openjudge/: 6174.c  7654.c  7717.c  8222.c  rand.c
科技部小作业/: cross.c  diamond.c  formula.c  output.c  sum.c  tri.c
高级语言程序设计/2/: circle.c  实验报告2.md
