cmake_minimum_required(VERSION 3.17)
project(C_Language_Learning C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories("C Primer Plus")
include_directories("C Primer Plus/1")
include_directories("C Primer Plus/10")
include_directories("C Primer Plus/13")
include_directories("C Primer Plus/2")
include_directories("C Primer Plus/3")
include_directories("C Primer Plus/4")
include_directories("C Primer Plus/5")
include_directories("C Primer Plus/6")
include_directories("C Primer Plus/7")
include_directories("C Primer Plus/8")
include_directories("C Primer Plus/9！")
include_directories("noi openjudge")

add_executable(C_Language_Learning
        "C Primer Plus/1/1.c"
        "C Primer Plus/1/13.c"
        "C Primer Plus/1/Concrete.c"
        "C Primer Plus/10/bounds.c"
        "C Primer Plus/10/day_mon1.c"
        "C Primer Plus/10/day_mon2.c"
        "C Primer Plus/10/day_mon3.c"
        "C Primer Plus/10/designate.c"
        "C Primer Plus/10/no_data.c"
        "C Primer Plus/10/order.c"
        "C Primer Plus/10/pnt_add.c"
        "C Primer Plus/10/ptr_ops.c"
        "C Primer Plus/10/rain.c"
        "C Primer Plus/10/somedata.c"
        "C Primer Plus/10/sum_arr1.c"
        "C Primer Plus/10/sum_arr2.c"
        "C Primer Plus/13/count.c"
        "C Primer Plus/2/12_1.c"
        "C Primer Plus/2/12_2.c"
        "C Primer Plus/2/12_3.c"
        "C Primer Plus/2/12_4.c"
        "C Primer Plus/2/12_5.c"
        "C Primer Plus/2/12_6.c"
        "C Primer Plus/2/12_7.c"
        "C Primer Plus/2/first.c"
        "C Primer Plus/2/nogood.c"
        "C Primer Plus/2/two_func.c"
        "C Primer Plus/3/!11_6.c"
        "C Primer Plus/3/11_2.c"
        "C Primer Plus/3/11_3.c"
        "C Primer Plus/3/11_4.c"
        "C Primer Plus/3/11_5.c"
        "C Primer Plus/3/11_7.c"
        "C Primer Plus/3/altnames.c"
        "C Primer Plus/3/badcount.c"
        "C Primer Plus/3/bases.c"
        "C Primer Plus/3/charcode.c"
        "C Primer Plus/3/escape.c"
        "C Primer Plus/3/print1.c"
        "C Primer Plus/3/print2.c"
        "C Primer Plus/3/rhodium.c"
        "C Primer Plus/3/showf_pt.c"
        "C Primer Plus/3/typesize.c"
        "C Primer Plus/4/8_1.c"
        "C Primer Plus/4/8_2.c"
        "C Primer Plus/4/8_3.c"
        "C Primer Plus/4/8_4.c"
        "C Primer Plus/4/8_5!.c"
        "C Primer Plus/4/8_6.c"
        "C Primer Plus/4/8_7.c"
        "C Primer Plus/4/defines.c"
        "C Primer Plus/4/flags.c"
        "C Primer Plus/4/float.c"
        "C Primer Plus/4/floatconv.c"
        "C Primer Plus/4/input.c"
        "C Primer Plus/4/intconv.c"
        "C Primer Plus/4/longstrg.c"
        "C Primer Plus/4/pentval.c"
        "C Primer Plus/4/pizza.c"
        "C Primer Plus/4/praise1.c"
        "C Primer Plus/4/praise2.c"
        "C Primer Plus/4/printout.c"
        "C Primer Plus/4/skip2.c"
        "C Primer Plus/4/talkback.c"
        "C Primer Plus/4/varwid.c"
        "C Primer Plus/4/width.c"
        "C Primer Plus/5/11_1.c"
        "C Primer Plus/5/11_2.c"
        "C Primer Plus/5/11_3.c"
        "C Primer Plus/5/11_4.c"
        "C Primer Plus/5/11_5.c"
        "C Primer Plus/5/11_6.c"
        "C Primer Plus/5/11_7.c"
        "C Primer Plus/5/11_8.c"
        "C Primer Plus/5/add_one.c"
        "C Primer Plus/5/addemup.c"
        "C Primer Plus/5/bottles.c"
        "C Primer Plus/5/convert.c"
        "C Primer Plus/5/divide.c"
        "C Primer Plus/5/golf.c"
        "C Primer Plus/5/min_sec.c"
        "C Primer Plus/5/post_pre.c"
        "C Primer Plus/5/pound.c"
        "C Primer Plus/5/rules.c"
        "C Primer Plus/5/running.c"
        "C Primer Plus/5/shoes1.c"
        "C Primer Plus/5/shoes2.c"
        "C Primer Plus/5/sizeof.c"
        "C Primer Plus/5/squares.c"
        "C Primer Plus/5/wheat.c"
        "C Primer Plus/6/16_1.c"
        "C Primer Plus/6/16_10.c"
        "C Primer Plus/6/16_11.c"
        "C Primer Plus/6/16_12.c"
        "C Primer Plus/6/16_13.c"
        "C Primer Plus/6/16_14.c"
        "C Primer Plus/6/16_15.c"
        "C Primer Plus/6/16_16.c"
        "C Primer Plus/6/16_2.c"
        "C Primer Plus/6/16_3.c"
        "C Primer Plus/6/16_4.c"
        "C Primer Plus/6/16_5.c"
        "C Primer Plus/6/16_6.c"
        "C Primer Plus/6/16_7.c"
        "C Primer Plus/6/16_8.c"
        "C Primer Plus/6/16_9.c"
        "C Primer Plus/6/boolean.c"
        "C Primer Plus/6/cmpflt.c"
        "C Primer Plus/6/do_while.c"
        "C Primer Plus/6/entry.c"
        "C Primer Plus/6/for_cube.c"
        "C Primer Plus/6/postage.c"
        "C Primer Plus/6/power.c"
        "C Primer Plus/6/rows1.c"
        "C Primer Plus/6/rows2.c"
        "C Primer Plus/6/scores_in.c"
        "C Primer Plus/6/summing.c"
        "C Primer Plus/6/sweetie.c"
        "C Primer Plus/6/sweetie2.c"
        "C Primer Plus/6/t_and_f.c"
        "C Primer Plus/6/trouble.c"
        "C Primer Plus/6/truth.c"
        "C Primer Plus/6/when.c"
        "C Primer Plus/6/while1.c"
        "C Primer Plus/6/while2.c"
        "C Primer Plus/6/zeno.c"
        "C Primer Plus/7/12_1.c"
        "C Primer Plus/7/12_10.c"
        "C Primer Plus/7/12_11.c"
        "C Primer Plus/7/12_2.c"
        "C Primer Plus/7/12_3.c"
        "C Primer Plus/7/12_4.c"
        "C Primer Plus/7/12_5.c"
        "C Primer Plus/7/12_6.c"
        "C Primer Plus/7/12_7.c"
        "C Primer Plus/7/12_8.c"
        "C Primer Plus/7/12_9.c"
        "C Primer Plus/7/animals.c"
        "C Primer Plus/7/break.c"
        "C Primer Plus/7/chcount.c"
        "C Primer Plus/7/colddays.c"
        "C Primer Plus/7/cyoher1.c"
        "C Primer Plus/7/cypher2.c"
        "C Primer Plus/7/divisors.c"
        "C Primer Plus/7/electric.c"
        "C Primer Plus/7/paint.c"
        "C Primer Plus/7/skippart.c"
        "C Primer Plus/7/vowels.c"
        "C Primer Plus/7/wordcnt.c"
        "C Primer Plus/8/10_1.c"
        "C Primer Plus/8/10_2.c"
        "C Primer Plus/8/10_3.c"
        "C Primer Plus/8/10_4.c"
        "C Primer Plus/8/10_5.c"
        "C Primer Plus/8/10_6.c"
        "C Primer Plus/8/10_7.c"
        "C Primer Plus/8/10_8.c"
        "C Primer Plus/8/checking.c"
        "C Primer Plus/8/echo.c"
        "C Primer Plus/8/echo_eof.c"
        "C Primer Plus/8/file_eof.c"
        "C Primer Plus/8/guess.c"
        "C Primer Plus/8/main.c"
        "C Primer Plus/8/menuette.c"
        "C Primer Plus/8/showchar1.c"
        "C Primer Plus/8/showchar2.c"
        "C Primer Plus/9！/11_1.c"
        "C Primer Plus/9！/11_2.c"
        "C Primer Plus/9！/factor.c"
        "C Primer Plus/9！/hotel.c"
        "C Primer Plus/9！/hotel.h"
        "C Primer Plus/9！/lesser.c"
        "C Primer Plus/9！/lethead1.c"
        "C Primer Plus/9！/lethead2.c"
        "C Primer Plus/9！/loccheck.c"
        "C Primer Plus/9！/misuse.c"
        "C Primer Plus/9！/proto.c"
        "C Primer Plus/9！/recur.c"
        "C Primer Plus/9！/swap1.c"
        "C Primer Plus/9！/swap2.c"
        "C Primer Plus/9！/swap3.c"
        "C Primer Plus/9！/usehotel.c"
        "C Primer Plus/12_7.c"
        "noi openjudge/6174.c"
        "noi openjudge/7654.c"
        "noi openjudge/7717.c"
        "noi openjudge/8222.c"
        "noi openjudge/rand.c")
